# Swelling_FastAPIServer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
k8s/: README.md
k8s/base/: configmap.yaml  gateway.yaml  kustomization.yaml  namespace.yaml  notifications.yaml  service-account.yaml  swelling.yaml  users.yaml
k8s/overlays/local/: kustomization.yaml
scripts/: run_local.py
services/: __init__.py
services/gateway/app/: main.py
services/notifications/app/: __init__.py  main.py
services/swelling/: __init__.py
services/swelling/app/: __init__.py  main.py
services/users/app/: main.py
src/swelling_common/: __init__.py  health.py  settings.py
tests/: test_health.py  test_swelling_api.py
